@@ -3,6 +3,7 @@
 (2009-01-12)
  * (Fix) When opening an iso file, start to play from the dvd menu instead
    of title 1.
+ * Added a new option to select the shadow color for ass subtitles.
 
 (2009-01-11)
  * Now it's possible to play a dvd with menus from command line 
